Fixed non blink ,pda; whitespace issue

--- a/source/_sass/layouts/_modal.sass
+++ b/source/_sass/layouts/_modal.sass
@@ -204,6 +204,7 @@ input[type="radio"]:checked + .modal
 html.js
   .modal
     position: absolute
+    overflow: hidden
     &.prev
       display: block
       &.left
