--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -738,7 +738,8 @@ input[type="radio"]:checked + .modal {
   visibility: visible; }
 
 html.js .modal {
-  position: absolute; }
+  position: absolute;
+  overflow: hidden; }
   html.js .modal.prev {
     display: block; }
     html.js .modal.prev.left {
